# src/app/api/models/base-response.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+export interface BaseResponse {
+  errorMessage?: string;
+  isSuccess?: boolean;
+}
