# src/app/api/models/dream-id-request.ts
@@ -1,0 +1,4 @@
+/* tslint:disable */
+export interface DreamIdRequest {
+  id?: number;
+}
